--- a/app/src/main/res/layout/activity_zxing_layout.xml
+++ b/app/src/main/res/layout/activity_zxing_layout.xml
@@ -4,23 +4,54 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<com.journeyapps.barcodescanner.DecoratedBarcodeView
-    android:id="@+id/zxing_barcode_scanner"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:zxing_preview_scaling_strategy="centerCrop"
-    app:zxing_use_texture_view="true"
-    app:zxing_scanner_layout="@layout/custom_barcode_scanner"
-    app:zxing_framing_rect_width="200dp"
-    app:zxing_framing_rect_height="200dp"/>
+    <com.journeyapps.barcodescanner.DecoratedBarcodeView
+        android:id="@+id/zxing_barcode_scanner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:zxing_framing_rect_height="200dp"
+        app:zxing_framing_rect_width="200dp"
+        app:zxing_preview_scaling_strategy="centerCrop"
+        app:zxing_scanner_layout="@layout/custom_barcode_scanner"
+        app:zxing_use_texture_view="true" />
 
-<android.support.v7.widget.Toolbar
+    <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/actionBarSize"
     android:fitsSystemWindows="true"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+</android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom|center_horizontal">
+
+        <TextView
+            android:id="@+id/zxing_status_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="182dp"
+            android:background="@color/zxing_transparent"
+            android:text="Scannez"
+            android:textColor="@color/zxing_status_text" />
+
+        <Button
+            android:id="@+id/add_manually"
+            android:layout_width="153dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="89dp"
+            android:text="Entrer le code " />
+    </RelativeLayout>
+
+
+
 
 </FrameLayout>
