modificiation sur les activites de fragments

--- a/app/src/main/res/drawable/tab_menu_bg.xml
+++ b/app/src/main/res/drawable/tab_menu_bg.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
     <item android:state_selected="true">
         <shape>
-            <solid android:color="#FFC4C4C4" />
+            <solid android:color="#f9f8f8" />
         </shape>
     </item>
     <item>
