--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,21 @@
         android:background="@color/bg_topbar">
 
 
+        <Button
+            android:id="@+id/button_ajouter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/txt_topbar"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="294dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="0dp"
+            android:text="Ajouter" />
 
-            <TextView
+        <TextView
                 android:id="@+id/txt_topbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -24,6 +37,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/text_topbar"
                 android:text="IF26_Card"/>
+
 
         <View
                 android:layout_width="match_parent"
