--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="bg_black">#000000</color>
     <color name="bg_white">#FFFFFF</color>
     <color name="bg_gray">#00F1F1F1</color>
-    <color name="transparent">#00FFFFFF</color>
+    <color name="transparent">#00f7f6f6</color>
 
 
 
@@ -19,4 +19,5 @@
     <color name="text_red">#ff000d</color>
     <color name="text_topbar">#694E42</color>
     <color name="div_white">#E5E5E5</color>
+    <color name="text_yellow">#fc970a</color>
 </resources>
