--- a/app/src/main/res/layout/activity_card_liste.xml
+++ b/app/src/main/res/layout/activity_card_liste.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    >
     <GridView
         android:id="@+id/liste_card_lv"
         android:layout_width="match_parent"
@@ -15,4 +15,6 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="20dp" >
     </GridView>
+
+
 </LinearLayout>
