--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -11,8 +11,32 @@
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_marginEnd="148dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="36dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_gravity="center_vertical"
+        android:background="#AA444444"
+        android:scrollbars="none">
+
+    </HorizontalScrollView>
+
+    <ListView
+        android:id="@+id/card_list_lv"
+        android:layout_width="wrap_content"
+        android:layout_height="455dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="92dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062" />
+
+
 </android.support.constraint.ConstraintLayout>
