--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -21,6 +21,7 @@
         android:layout_height="150dp"
         android:layout_gravity="center_vertical"
         android:background="#AA444444"
+        android:fillViewport="true"
         android:scrollbars="none">
 
     </HorizontalScrollView>
@@ -32,11 +33,11 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="92dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintVertical_bias="0.333" />
 
 
 </android.support.constraint.ConstraintLayout>
