--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -6,12 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".AddCardActivity">
 
+    <ListView
+        android:id="@+id/card_list_lv"
+        android:layout_width="wrap_content"
+        android:layout_height="455dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="92dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333" />
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="315dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="37dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/homeAsUpIndicator" />
+
     <Button
         android:id="@+id/add_card"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginTop="52dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,18 +62,7 @@
 
     </HorizontalScrollView>
 
-    <ListView
-        android:id="@+id/card_list_lv"
-        android:layout_width="wrap_content"
-        android:layout_height="455dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="92dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+
 
 
 </android.support.constraint.ConstraintLayout>
