--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:id = "@+id/item_card"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/list_icon"
         android:layout_width="75dp"
-        android:layout_height="45dp"
+        android:layout_height="55dp"
          />
 
     <TextView
