--- a/app/src/main/res/layout/activity_card_detail.xml
+++ b/app/src/main/res/layout/activity_card_detail.xml
@@ -1,72 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/top_typephoto"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:background="@color/bg_topbar">
+    android:layout_height="match_parent"
+    tools:context=".ShowCardActivity"
+   >
 
 
+    <ImageButton
+        android:id="@+id/backB"
+        android:layout_width="37dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/homeAsUpIndicator" />
 
+    <ImageView
+        android:id="@+id/card_code"
+        android:layout_width="282dp"
+        android:layout_height="164dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.266" />
 
-        <LinearLayout
-            android:id="@+id/bot_detail"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/card_number"
+        android:layout_width="265dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:text="TextView"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_code" />
 
-            <TextView
-                android:id="@+id/txt_card_D"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/card"
-                android:textAlignment="center"
-                android:textColor="@color/bg_black"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/txt_comment_D"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/comment"
-                android:textAlignment="center"
-                android:textColor="@color/bg_black"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-    </RelativeLayout>
-
-
-
-    <FrameLayout
-        android:id="@+id/content_D"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/top_typephoto"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp">
-
-
-    </FrameLayout>
-
-
-
-
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
