--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,15 @@
             android:id="@+id/button_ajouter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/txt_topbar"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/txt_topbar"
+            android:layout_marginBottom="0dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginStart="294dp"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="0dp"
-            android:text="Ajouter" />
+            android:text="Add" />
 
         <TextView
                 android:id="@+id/txt_topbar"
